[package]
name = "k-snowflake"
version = "1.0.0"
authors = ["KryptonFox"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/KryptonFox/k-snowflake"
homepage = "https://github.com/KryptonFox/k-snowflake"
description = "Simple zero-dependency implementation of Twitter`s (X) snowflake in rust"
